--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ase2json",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "Adobe Swatch Exchange (ASE) to JSON Converter",
   "main": "ase2json.js",
   "scripts": {
@@ -10,5 +10,11 @@
   "license": "MIT",
   "dependencies": {
   	"binary": "0.3.0"
+  },
+  "repository": {
+    "url": "https://github.com/m99coder/ase2json.git"
+  },
+  "engines": {
+    "node": "*"
   }
 }
